--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,7 @@
     </div>
 
     <script src="js/auth.js"></script>
+    <script src="js/dashboard.js"></script>
     <script src="js/portfolio.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
