--- a/profile.html
+++ b/profile.html
@@ -96,6 +96,7 @@
     </div>
 
     <script src="js/auth.js"></script>
+    <script src="js/dashboard.js"></script>
     <script src="js/portfolio.js"></script>
     <script src="js/jobs.js"></script>
     <script>
